Fix z-index for image-modal, use z-index variables for other main elements. Fix offcanvas nav placement with notificationbar. Fix table column widths

--- a/shared/scss/components/common/image-modal.scss
+++ b/shared/scss/components/common/image-modal.scss
@@ -1,7 +1,7 @@
 .image-modal {
   display: none;
   position: fixed;
-  z-index: 2;
+  z-index: $zindex-modal-background;
   padding-top: $base*6;
   left: 0;
   top: 0;
@@ -22,6 +22,10 @@
     @media(min-width: $width-sm) {
       max-width: 80%;
     }
+  }
+
+  img {
+    border-radius: 0;
   }
 
   .close {
