--- a/shared/scss/components/common/notification.scss
+++ b/shared/scss/components/common/notification.scss
@@ -4,7 +4,7 @@
   padding: $base/2 $base;
   font-size: $font-size-base;
   position: fixed;
-  z-index: 9999;
+  z-index: $zindex-navbar-fixed;
   width: 100%;
   top: 0;
 
